Create lending.js and lending.html